fix extra space above about section, remove faq section

--- a/css/style.css
+++ b/css/style.css
@@ -2273,10 +2273,14 @@ left:44%;
 
 
 
-
- /* CUSTOM STYLES */
+ /* ######################################################################### */
+ /*                            CUSTOM STYLES                                  */
+ /* ######################################################################### */
 
  h3.about-icon {
     font-size: 80px;
     margin: 0px 0 21px 0;
  }
+.services-box {
+    padding: 35px 20px 0px 20px;
+}
